refactor(courtManager): List.of를 Arrays.asList로 변경
- 코드 호환성을 위해 리스트 생성 방식 수정